@@ -5,14 +5,6 @@ plugins {
 sourceCompatibility = '12'
 targetCompatibility = '12'
 
-tasks.withType(JavaCompile).each {
-    it.options.compilerArgs.add('--enable-preview')
-}
-
-test {
-    jvmArgs(['--enable-preview'])
-}
-
 dependencies {
     testImplementation 'junit:junit:4.12'
 }
