@@ -3,19 +3,11 @@ import org.springframework.boot.gradle.plugin.SpringBootPlugin
 plugins {
     id 'org.springframework.boot' version '2.1.7.RELEASE' apply false
     id 'io.spring.dependency-management' version '1.0.8.RELEASE'
-    id 'scala'
+    id 'java-library'
 }
 
 sourceCompatibility = '12'
 targetCompatibility = '12'
-
-tasks.withType(JavaCompile).each {
-    it.options.compilerArgs.add('--enable-preview')
-}
-
-test {
-    jvmArgs(['--enable-preview'])
-}
 
 dependencyManagement {
     imports {
