@@ -9,14 +9,6 @@ plugins {
 sourceCompatibility = '12'
 targetCompatibility = '12'
 
-tasks.withType(JavaCompile).each {
-    it.options.compilerArgs.add('--enable-preview')
-}
-
-test {
-    jvmArgs(['--enable-preview'])
-}
-
 dependencyManagement {
     imports {
         mavenBom SpringBootPlugin.BOM_COORDINATES
